--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ build/
 bld/
 [Bb]in/
 [Oo]bj/
+BundleArtifacts/
+Package.StoreAssoci
 
 # Visual Studo 2015 cache/options directory
 .vs/
@@ -152,6 +154,8 @@ csx/
 
 # Microsoft Store app package directory
 AppPackages/
+Package.StoreAssociation.xml
+_pkginfo.txt
 
 # Others
 *.[Cc]ache
